# Repyable

./: .gitignore  CONVENTIONS.md  README.md  perf.prof  pyproject.toml
repyable/: __init__.py  circular_buffer.py  client.py  endpoint.py  packet-bak.py  packet.py  parallel.py  safe_process.py  server-bak.py
tests/: __init__.py  conftest.py  real_world_socket.py  test_logging.py  test_packet.py  test_parallel.py  test_real_world_socket.py  test_safe_process.py
tests/test_real_world_socket/: benchmark_latency.py  foo.py  test_basics.py  test_jitter.py  test_latency.py  test_packet_loss.py
tests/util/: __init__.py  real_world_socket.py  udp_receiver.py
